# hightower

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.pt-BR.md  SECURITY.md  install.ps1  uninstall.ps1
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
adapters/: Cargo.toml
adapters/src/: knowledge.rs  known_processes.json  lib.rs  procinfo.rs  signature.rs
cli/: Cargo.toml
cli/src/: explain.rs  main.rs  render.rs  report.rs
core/: Cargo.toml
core/src/: classify.rs  error.rs  lib.rs  ports.rs  process.rs
core/src/rules/: masquerading.rs  mod.rs  unknown.rs  unsigned.rs
docs/: GUIDE.md  GUIDE.pt-BR.md
