[package]
name = "hightower-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Driven adapters for hightower: real Windows implementations of the core ports (ToolHelp32, Authenticode) plus the embedded known-process database."

# Depends on core for the port traits it implements. The heavy OS crates
# (windows) and serde_json (for the embedded database) get added in the
# milestones that use them: windows in v0.2.0 (#5), serde_json in v0.3.0 (#7).
# ponytail: deps added per-milestone, not all up front.
[dependencies]
hightower-core = { path = "../core" }

# The windows crate lives here, never in `core`. Target-gated to Windows so the
# domain crate stays OS-free and this dependency is only pulled on the one
# platform where the binary actually runs. Only the features this milestone's
# process listing needs; signature-check features (Cryptography/WinTrust) arrive
# with that milestone.
[target."cfg(windows)".dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }
