[package]
name = "hightower-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The hightower command-line tool: scans running Windows processes and explains them in plain language."

[[bin]]
name = "hightower"
path = "src/main.rs"

# The driving ring: depends on core (the domain) and adapters (the concrete
# implementations it wires together). clap arrives with the real subcommands in
# v0.2.0 (#6); serde_json for --json in v0.5.0 (#9).
# ponytail: deps added per-milestone, not all up front.
[dependencies]
hightower-core = { path = "../core" }
hightower-adapters = { path = "../adapters" }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"

# Rich terminal output. Presentation only, so it lives here in `cli`, never in
# core/adapters -- the workspace split exists to keep it out of the domain.
#
# comfy-table draws the box-drawn scan table with per-cell colour; anstream
# enables Windows virtual-terminal mode so ANSI renders in cmd.exe (and strips
# colour when stdout is not a terminal); anstyle builds the colour for the
# plain-text `explain` output; terminal_size gives the width we truncate PATH to.
# ponytail: hand-rolling colour + width-truncation + borders stopped paying off
# (it was the right call while the table was flat) -- these four small crates
# replace that. Alternative stack considered and rejected: tabled + owo-colors
# (owo does not enable Windows VT mode, so cmd.exe would show raw escapes).
comfy-table = "7.1"
anstream = "0.6"
anstyle = "1.0"
terminal_size = "0.4"
