[package]
name = "hightower-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure domain and ports for hightower: process model, risk heuristics, and the traits the outer rings implement. No OS dependencies."

# The very next milestone (v0.2.0) introduces ProcessInfo (serde) and
# HightowerError (thiserror), so both are declared now. The `windows` crate is
# deliberately absent and must stay absent: its absence is what turns a Windows
# import in the domain into a compile error rather than a review comment.
[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
